test/error/ArrayPtrNullable.fu
public class Test
{
	public bool Run()
	{
		Test?[] a = null; //ERROR: Cannot convert 'null' to 'Test?[]'
		Test[2] as;
		Test[]!? a1 = as;
		a1[0] = null; //ERROR: Cannot convert 'null' to 'Test'
		return true;
	}
}
